components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_keep_final_estimates_only-2.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "result[1]"
---
EstimationTable {
    method: Some(
        Imp,
    ),
    parameters: [
        "ITERATION",
        "THETA1",
        "THETA2",
        "THETA3",
        "THETA4",
        "THETA5",
        "THETA6",
        "THETA7",
        "THETA8",
        "THETA9",
        "THETA10",
        "THETA11",
        "SIGMA(1,1)",
        "OMEGA(1,1)",
        "OMEGA(2,1)",
        "OMEGA(2,2)",
        "OMEGA(3,1)",
        "OMEGA(3,2)",
        "OMEGA(3,3)",
        "OMEGA(4,1)",
        "OMEGA(4,2)",
        "OMEGA(4,3)",
        "OMEGA(4,4)",
        "OBJ",
    ],
    rows: [
        EstimationRow {
            iteration: -1000000000,
            values: [
                -1000000000.0,
                3.30073,
                3.2541,
                -0.61237,
                -0.20862,
                0.7376,
                1.14159,
                0.334262,
                0.190709,
                0.690655,
                2.29873,
                0.100015,
                1.0,
                0.0103243,
                0.000195697,
                0.00798982,
                0.00119334,
                -0.000232896,
                0.00979714,
                -0.000656799,
                0.000505325,
                0.00192836,
                0.00972803,
                -10784.643844039994,
            ],
        },
    ],
}
