components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_keep_final_estimates_only.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "result[0]"
---
EstimationTable {
    method: Some(
        Its,
    ),
    parameters: [
        "ITERATION",
        "THETA1",
        "THETA2",
        "THETA3",
        "THETA4",
        "THETA5",
        "THETA6",
        "THETA7",
        "THETA8",
        "THETA9",
        "THETA10",
        "THETA11",
        "SIGMA(1,1)",
        "OMEGA(1,1)",
        "OMEGA(2,1)",
        "OMEGA(2,2)",
        "OMEGA(3,1)",
        "OMEGA(3,2)",
        "OMEGA(3,3)",
        "OMEGA(4,1)",
        "OMEGA(4,2)",
        "OMEGA(4,3)",
        "OMEGA(4,4)",
        "OBJ",
    ],
    rows: [
        EstimationRow {
            iteration: -1000000000,
            values: [
                -1000000000.0,
                3.30275,
                3.25636,
                -0.611284,
                -0.208127,
                0.728967,
                1.13667,
                0.337477,
                0.191719,
                0.691923,
                2.2983,
                0.0999153,
                1.0,
                0.0102808,
                0.000165819,
                0.00795601,
                0.00120055,
                -0.000360578,
                0.00998908,
                -0.000630844,
                0.000453655,
                0.00202238,
                0.00973306,
                -10771.857820815105,
            ],
        },
    ],
}
