components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_parse_ext_files@1002c.ext.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/ext/1002c.ext
---
ITERATION,THETA1,THETA2,THETA3,THETA4,"SIGMA(1,1)","SIGMA(2,1)","SIGMA(2,2)","OMEGA(1,1)","OMEGA(2,1)","OMEGA(2,2)","OMEGA(3,1)","OMEGA(3,2)","OMEGA(3,3)","OMEGA(4,1)","OMEGA(4,2)","OMEGA(4,3)","OMEGA(4,4)",OBJ
0,0.829,2.9,1.711,6.43,0.01,0.001,0.01,0.009304,0.002,0.055245,0,0,0,0,0,0,0,1271.915107924061
5,0.933536,3.04785,2.11607,6.32125,0.00792892,0.000890994,0.0100001,0.00989068,0.000249269,0.0584574,0,0,0,0,0,0,0,1249.8844805866693
10,0.952825,3.11866,2.10856,6.29452,0.00829043,0.000964315,0.0100122,0.00911379,-0.0228011,0.0816059,0,0,0,0,0,0,0,1245.009054424716
15,0.953591,3.02832,2.11132,6.27,0.0083908,0.00124529,0.0100851,0.00864745,-0.0198042,0.0640071,0,0,0,0,0,0,0,1244.6655925406292
20,0.903752,3.26593,2.08835,6.40439,0.00684895,6.36392,5913.26,0.0122482,-0.0251348,0.0676214,0,0,0,0,0,0,0,1242.457438334441
25,0.942408,3.02992,2.08029,6.42859,0.00503264,16.9186,56876.8,0.0109757,-0.0222348,0.0651964,0,0,0,0,0,0,0,1239.195307939899
28,0.942457,3.02992,2.0805,6.42856,0.00503187,16.9126,56844.7,0.0109859,-0.022249,0.0652217,0,0,0,0,0,0,0,1239.1952927987409
-1000000000,0.942457,3.02992,2.0805,6.42856,0.00503187,16.9126,56844.7,0.0109859,-0.022249,0.0652217,0,0,0,0,0,0,0,1239.1952927987409
-1000000004,0,0,0,0,0.0709357,0.999999,238.421,0.104814,-0.83118,0.255385,0,0,0,0,0,0,0,0
-1000000006,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,0
-1000000007,0,37,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1000000008,0.0165588,0.00329861,-0.00302961,-0.000127706,45.7171,-0.0276661,0.00000408693,0.0196724,0.000798743,0.00855049,0,0,0,0,0,0,0,0
