components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_parse_ext_files@bql.ext.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/ext/bql.ext
---
ITERATION,THETA1,THETA2,THETA3,THETA4,THETA5,THETA6,THETA7,THETA8,THETA9,"SIGMA(1,1)","OMEGA(1,1)","OMEGA(2,1)","OMEGA(2,2)","OMEGA(3,1)","OMEGA(3,2)","OMEGA(3,3)",OBJ
0,26,280,300,60,1.5,0.75,1,1,0.75,0.0025,0.1,0,0.04,0,0,0.01,-14341.129441445575
5,26.8039,286.49,295.394,58.0373,1.52247,0.75,1,1,0.75,0.00244319,0.101091,0,0.0355314,0,0,0.0107235,-14344.687563815003
10,26.5548,283.399,296.539,58.5897,1.51147,0.75,1,1,0.75,0.002438,0.102221,0,0.0355764,0,0,0.0114562,-14345.85105054859
15,26.4911,282.616,297.044,58.7497,1.50949,0.75,1,1,0.75,0.00245104,0.100615,0,0.0360015,0,0,0.0111728,-14346.00602978257
16,26.4911,282.616,297.044,58.7497,1.50949,0.75,1,1,0.75,0.00245104,0.100615,0,0.0360015,0,0,0.0111728,-14346.00602978257
-1000000000,26.4911,282.616,297.044,58.7497,1.50949,0.75,1,1,0.75,0.00245104,0.100615,0,0.0360015,0,0,0.0111728,-14346.00602978257
-1000000001,NaN,NaN,NaN,NaN,NaN,10000000000,10000000000,10000000000,10000000000,NaN,NaN,10000000000,NaN,10000000000,10000000000,NaN,0
-1000000002,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0
-1000000003,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1000000004,0,0,0,0,0,0,0,0,0,0.049508,0.317198,0,0.189741,0,0,0.105701,0
-1000000005,0,0,0,0,0,0,0,0,0,NaN,NaN,10000000000,NaN,10000000000,10000000000,NaN,0
-1000000006,0,0,0,0,0,1,1,1,1,0,0,1,0,1,1,0,0
-1000000007,0,37,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1000000008,-0.0016243,-0.0000929044,-0.000108709,-0.00009484,-0.0129902,0,0,0,0,-0.155871,0.00101004,0,0.0588113,0,0,-0.0596231,0
