components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_parse_ext_files@commas.ext.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/ext/commas.ext
---
ITERATION,THETA1,THETA2,THETA3,THETA4,"SIGMA(1,1)","SIGMA(2,1)","SIGMA(2,2)","OMEGA(1,1)","OMEGA(2,1)","OMEGA(2,2)","OMEGA(3,1)","OMEGA(3,2)","OMEGA(3,3)",OBJ
0,18.62,232.5,2.82,1,0.1,0,2,0.1,0.01,0.1,0.01,0.01,0.1,6822.998031012154
5,19.1042,246.2225,2.421714,1,0.07636298,0,2.275081,0.09576878,0.05942007,0.06794229,0.001017067,-0.007104914,0.1203023,6743.678286199388
10,18.71751,242.0034,2.501823,1,0.07308248,0,8.266179,0.1298539,0.07045639,0.06184252,-0.01081113,-0.05346046,0.1535898,6730.556637498237
15,18.44335,233.746,2.290789,1,0.06345394,0,24.78175,0.1029066,0.04640191,0.04713391,0.003397636,-0.03892912,0.09754532,6719.197593720153
20,18.54694,233.0482,2.304712,1,0.06412152,0,27.34404,0.1054237,0.04881659,0.04755111,-0.0004258583,-0.0428978,0.0931585,6718.864733303771
25,18.5421,233.0316,2.304823,1,0.06418462,0,27.31109,0.1055524,0.04875125,0.04749263,-0.0006334831,-0.04331287,0.091803,6718.861730228764
-1000000000,18.5421,233.0316,2.304823,1,0.06418462,0,27.31109,0.1055524,0.04875125,0.04749263,-0.0006334831,-0.04331287,0.091803,6718.861730228764
