components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_parse_ext_files@itsimp.ext.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "result[0].to_csv()"
input_file: components/nonmem/test_data/ext/itsimp.ext
---
ITERATION,THETA1,THETA2,THETA3,THETA4,THETA5,THETA6,THETA7,THETA8,THETA9,THETA10,THETA11,"SIGMA(1,1)","OMEGA(1,1)","OMEGA(2,1)","OMEGA(2,2)","OMEGA(3,1)","OMEGA(3,2)","OMEGA(3,3)","OMEGA(4,1)","OMEGA(4,2)","OMEGA(4,3)","OMEGA(4,4)",OBJ
0,3.30275,3.25636,-0.611284,-0.208127,0.728967,1.13667,0.337477,0.191719,0.691923,2.2983,0.0999153,1,0.0102808,0.000165819,0.00795601,0.00120055,-0.000360578,0.00998908,-0.000630844,0.000453655,0.00202238,0.00973306,-10781.492484773755
1,3.29914,3.25248,-0.611524,-0.208125,0.732242,1.14096,0.336421,0.190826,0.690618,2.29906,0.100179,1,0.0103154,0.000208928,0.00794538,0.00120872,-0.000351859,0.00992586,-0.000652251,0.000443645,0.00196856,0.0097405,-10782.339129170921
2,3.2992,3.25407,-0.611865,-0.208643,0.734388,1.14196,0.33551,0.190735,0.690782,2.29879,0.100188,1,0.010312,0.000170957,0.00795731,0.00120499,-0.000315725,0.00986725,-0.000607716,0.000473349,0.00197495,0.00975861,-10781.267187721414
3,3.30096,3.25381,-0.612376,-0.208583,0.736016,1.14132,0.334903,0.190897,0.690752,2.29867,0.100079,1,0.0102729,0.000178186,0.00802139,0.00118854,-0.000284265,0.00986018,-0.000633531,0.000485947,0.00201724,0.00979119,-10781.777965447918
4,3.30089,3.25389,-0.612414,-0.208576,0.734951,1.14037,0.335022,0.191126,0.690782,2.29905,0.10012,1,0.0102814,0.000156297,0.00803334,0.00116708,-0.000205204,0.00982614,-0.000664507,0.000516339,0.00199826,0.00981857,-10781.36471563823
5,3.29963,3.25393,-0.612053,-0.20864,0.735747,1.13812,0.33484,0.191872,0.690824,2.29883,0.100006,1,0.0103078,0.000189243,0.00801666,0.00117649,-0.00021564,0.0098532,-0.000640673,0.000522724,0.0019449,0.00985194,-10783.113657858057
6,3.30039,3.25191,-0.612202,-0.207998,0.734726,1.13495,0.335125,0.192837,0.69073,2.29874,0.100037,1,0.0103006,0.000155928,0.00803476,0.00120556,-0.000193808,0.00986512,-0.00065766,0.000521276,0.00192659,0.00978019,-10783.569601321378
7,3.29955,3.25265,-0.61197,-0.208188,0.73422,1.13692,0.335436,0.192312,0.690749,2.29908,0.099899,1,0.0102751,0.000164786,0.00800139,0.00120281,-0.000196812,0.00986586,-0.000655171,0.000528506,0.0019187,0.0097523,-10780.615002479331
8,3.30155,3.25343,-0.612563,-0.208476,0.737527,1.13982,0.33458,0.191462,0.690444,2.29884,0.100449,1,0.0102636,0.000191232,0.00801188,0.00119883,-0.000210713,0.00988723,-0.000614951,0.000527886,0.00193106,0.00972136,-10781.90052925973
9,3.29974,3.25443,-0.612059,-0.208691,0.735085,1.14095,0.335328,0.191111,0.690602,2.29866,0.10009,1,0.0103226,0.000160681,0.00798145,0.00120373,-0.000213493,0.00988898,-0.000655886,0.000539472,0.00192084,0.00971853,-10781.04302652118
10,3.3006,3.25392,-0.612269,-0.208654,0.735583,1.14027,0.335096,0.191209,0.690312,2.29891,0.100276,1,0.0103035,0.000178848,0.00801044,0.00118135,-0.000193409,0.00980105,-0.000636349,0.000568623,0.00190034,0.00971936,-10784.111704687492
11,3.301,3.2548,-0.612459,-0.208771,0.735575,1.14199,0.335001,0.190735,0.690503,2.29911,0.0997701,1,0.0103142,0.000206516,0.00800101,0.00120746,-0.000217742,0.00981729,-0.000614982,0.000545829,0.00189242,0.00967702,-10782.314713045706
12,3.30021,3.25457,-0.612242,-0.208755,0.735226,1.14101,0.334999,0.190977,0.690643,2.29877,0.100105,1,0.0102998,0.000211719,0.0079623,0.00117427,-0.000206985,0.00980407,-0.000654911,0.000550237,0.00189667,0.00970829,-10783.383645155916
13,3.30073,3.2541,-0.61237,-0.20862,0.7376,1.14159,0.334262,0.190709,0.690655,2.29873,0.100015,1,0.0103243,0.000195697,0.00798982,0.00119334,-0.000232896,0.00979714,-0.000656799,0.000505325,0.00192836,0.00972803,-10783.27513382822
13,3.30073,3.2541,-0.61237,-0.20862,0.7376,1.14159,0.334262,0.190709,0.690655,2.29873,0.100015,1,0.0103243,0.000195697,0.00798982,0.00119334,-0.000232896,0.00979714,-0.000656799,0.000505325,0.00192836,0.00972803,-10784.643844039994
-1000000000,3.30073,3.2541,-0.61237,-0.20862,0.7376,1.14159,0.334262,0.190709,0.690655,2.29873,0.100015,1,0.0103243,0.000195697,0.00798982,0.00119334,-0.000232896,0.00979714,-0.000656799,0.000505325,0.00192836,0.00972803,-10784.643844039994
-1000000001,0.0291366,0.0288953,0.00848895,0.00833274,0.0332415,0.0324709,0.0100751,0.00936532,0.0106777,0.00865098,0.00262794,0,0.000965618,0.000840977,0.00127733,0.00120549,0.00134118,0.00267236,0.000882971,0.00110316,0.00184392,0.00170672,0
-1000000002,0.0273729,0.0325861,0.0441218,0.0465264,0.075668,0.205677,0.268191,0.309918,0.509905,0.564063,0.595884,0.740752,0.98861,1.26122,1.33189,1.69132,1.75523,1.93957,2.38819,2.74722,3.47609,0,0
-1000000003,126.99,0.0273729,3.47609,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1000000004,0,0,0,0,0,0,0,0,0,0,0,1,0.101609,0.0215469,0.0893858,0.118654,-0.0263235,0.0989805,-0.0655374,0.0573179,0.197527,0.0986308,0
-1000000005,0,0,0,0,0,0,0,0,0,0,0,10000000000,0.00475165,0.091848,0.00714505,0.110187,0.1523,0.0134994,0.0903827,0.12318,0.154374,0.00865206,0
-1000000006,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0
-1000000007,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-1000000008,-5.6323,-1.30716,-18.3621,-3.31085,4.14348,5.76288,22.6732,29.6702,-4.61781,-8.97344,-28.1594,0,-2.13208,-24.3557,-72.64,1.69759,-17.3986,-25.138,24.5357,-88.2583,-72.035,96.9855,0
